# laws

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  Procfile  README.md  SETUP.md  alembic.ini  pyproject.toml  render.yaml  requirements-deploy.txt  requirements.txt  seed.py
.claude/: settings.json
.claude/agents/: alembic-migrator.md  auth-architect.md  code-simplifier.md  diff-reviewer.md  dx-tester.md  python-test-writer.md  react-component-writer.md  route-extractor.md  security-reviewer.md  test-runner.md
.claude/skills/petition-verifier-gotchas/: SKILL.md
.github/workflows/: smoke-test.yml
alembic/: env.py
alembic/versions/: 0001_baseline.py
docs/: ARCHITECTURE.md  DATABASE.md  FRONTEND.md  RISKS.md  ROUTES.md  TESTING.md
migrations/: README  env.py
migrations/versions/: 494cd34bb43d_initial_schema.py  6bd2f4c1a9e7_add_review_line_low_confidence_fields.py  9b1c2d3e4f5a_add_refresh_tokens.py  c1a4d7e8b5f2_add_review_line_crop_path.py  f39b8d2a61c4_add_review_line_voter_suggestions.py
src/petition_verifier/: __init__.py  api.py  auth.py  models.py  pipeline.py  upload_validation.py  verification_policy.py
src/petition_verifier/cli/: main.py
src/petition_verifier/extraction/: __init__.py  ensemble.py  eval.py
src/petition_verifier/ingestion/: __init__.py  ca_counties.py  claude_extractor.py  field_vision.py  pdf_processor.py  reducto.py  tesseract.py  vision.py
src/petition_verifier/matching/: __init__.py  address_normalizer.py  duplicate_detector.py  fraud_detector.py  handwriting.py  voter_matcher.py
src/petition_verifier/payroll/: calculator.py
src/petition_verifier/routes/: auth_routes.py  leaderboard_routes.py  location_routes.py  payment_routes.py  payroll_routes.py  reflection_routes.py  review_routes.py  schedule_routes.py  shift_routes.py  stats_routes.py  team_routes.py  worker_routes.py
src/petition_verifier/storage/: __init__.py  database.py
tests/: db_helpers.py  test_admin_cli.py  test_alembic_baseline.py  test_api_auth.py  test_api_smoke.py  test_app_smoke.py  test_auth_flow.py  test_bootstrap_admin.py  test_cookie_auth.py  test_database_persistence.py  test_extraction_ensemble.py  test_fraud_detector.py  test_handwriting_similarity.py  test_matching.py  test_migrations.py  test_ocr_eval.py  test_pipeline.py  test_react_review_route.py  test_review_approve_all.py  test_security_routes.py  test_upload_validation.py  test_verification_policy.py
tests/fixtures/: generate_test_data.py  voter_roll.csv
tests/fixtures/ocr_eval/: ground_truth.json
ui/: canvasser.html  dashboard.html  evann.html  field-manager.html  index.html  login.html  manifest.json  sw.js  worker.html
web/: eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vite.config.ts
web/scripts/: generate-api-types.mjs
web/src/: App.test.tsx  App.tsx  main.tsx  styles.css
web/src/api/: client.ts  openapi.d.ts  schema.d.ts
web/src/pages/: ReviewQueue.tsx
web/src/styles/: index.css
web/tests/: review.spec.ts
