[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "petition-verifier"
version = "0.1.0"
description = "Petition signature verification — OCR, voter roll matching, fraud detection"
requires-python = ">=3.9"
dependencies = [
    # PDF processing
    "pdf2image>=1.17.0",
    "pytesseract>=0.3.13",
    "Pillow>=10.0.0",
    "pillow-heif>=0.16.0",
    # Data / matching
    "rapidfuzz>=3.0.0",
    "usaddress>=0.5.10",
    "pandas>=2.0.0",
    # Database
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.0",
    # API / CLI
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    # Models
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    # Utilities
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
reducto = ["requests>=2.31.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "reportlab>=4.0.0",   # for generating test PDFs
    "faker>=24.0.0",
    "ruff>=0.6.0",
    "mypy>=1.10.0",
]

[project.scripts]
pvfy = "petition_verifier.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/petition_verifier"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["ui", "dist", ".venv"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle + pyflakes
    "I",              # isort
    "B",              # bugbear
    "UP",             # pyupgrade
    "S",              # bandit-lite (security)
    "SIM",            # flake8-simplify
]
ignore = [
    "E501",           # ruff format owns line length
    "S101",           # asserts are fine in tests
    "B008",           # FastAPI Depends() in defaults is correct usage
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "B"]
"seed.py" = ["S"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_redundant_casts = true
no_implicit_optional = true
check_untyped_defs = true
ignore_missing_imports = true
exclude = ["ui/", "dist/", "build/", ".venv/"]
